Логирование не закончено